# Schwupp

./: .gitignore  README.de.md  README.md  installation.sh  pyproject.toml  requirements.txt  run.sh
app/: __init__.py  __main__.py  config.py  deps.py  discovery.py  dlna.py  i18n.py  net.py  probe.py  updater.py
app/cast/: __init__.py  controller.py
app/mirror/: __init__.py  capture.py  dlnats.py  engine.py  hls.py  native.py  openscreen.py
app/mirror/cast_streaming/: __init__.py  control.py  crypto.py  rtp.py
app/receivers/: __init__.py  base.py  chromecast.py  dlna.py  webos.py
app/server/: __init__.py  httpserver.py
app/sources/: __init__.py  youtube.py
app/ui/: __init__.py  app.py  settings.py  window.py
docs/: MIRRORING.md
lang/: de.json  en.json
tools/: latency_probe.py  native_mirror_poc.py  native_mirror_v2.py  native_rtcp_test.py  native_sr_test.py  wake_and_mirror.py
