[project]
name = "schwupp"
version = "0.1.0"
description = "Casten von Medien, YouTube und Bildschirm auf Chromecast/Google-TV unter Linux (Desktop & Phosh-Phone)"
requires-python = ">=3.11"
dependencies = [
    "pychromecast>=14.0",
]

[project.scripts]
schwupp = "app.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
